crates/solidity-v2/testing/snapshots/diagnostics_output/semantic/constant_cycles/storage_base_slot/evaluation_depth_exceeded/generated/solc/0.8.29-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 6396] Error: The base slot of the storage layout must evaluate to a rational number.
    ╭─[input.sol:45:22]
    │
 45 │ contract C layout at C0 {}
    │                      ─┬  
    │                       ╰── Error occurred here.
────╯
